config/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cn-api
  labels:
    app: cn-api
spec:
  selector:
    matchLabels:
      app: cn-api
  replicas: 2
  template:
    metadata:
      labels:
        app: cn-api
    spec:
      containers:
      - name: api
        imagePullPolicy: Always
        image: djohnnie/csharpwars-cloudnative-api:1.0.0
        resources:
          requests:
            cpu: 250m
            memory: 50Mi
          limits:
            cpu: 1000m
            memory: 200Mi
        ports:
        - containerPort: 5000
