config/processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cn-proc
  labels:
    app: cn-proc
spec:
  selector:
    matchLabels:
      app: cn-proc
  replicas: 1
  template:
    metadata:
      labels:
        app: cn-proc
    spec:
      containers:
      - name: proc
        imagePullPolicy: Always
        image: djohnnie/csharpwars-cloudnative-processor:1.0.0
        resources:
          requests:
            cpu: 250m
            memory: 1024Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        ports:
        - containerPort: 5000
