config/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cn-web
  labels:
    app: cn-web
spec:
  selector:
    matchLabels:
      app: cn-web
  replicas: 2
  template:
    metadata:
      labels:
        app: cn-web
    spec:
      containers:
      - name: web
        imagePullPolicy: Always
        image: djohnnie/csharpwars-cloudnative-web:1.0.0
        resources:
          requests:
            cpu: 250m
            memory: 50Mi
          limits:
            cpu: 1000m
            memory: 200Mi
        ports:
        - containerPort: 5000
