config/processor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cn-proc-svc
  labels:
    app: cn-proc
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: cn-proc
